--- a/scss/base/_boilerplate.scss
+++ b/scss/base/_boilerplate.scss
@@ -10,6 +10,15 @@ html {
     /* box-shadow: 0 0 0 1px red inset; */
 }
 
+a, a:visited, a:active  {
+    text-decoration: none;
+    color: var(--white);
+}
+
+ul, li {
+    list-style: none;
+}
+
 body  {
     background-color: var(--background-color);
     font-family: u.$font-roboto;
@@ -22,7 +31,7 @@ body  {
 
 .container {
     width: calc(100% - u.rem(40));
-    max-width: u.rem(1000);
+    max-width: u.rem(1024);
     margin-left: auto;
     margin-right: auto;
 }
