--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,25 +2,39 @@
 
 .footer {
     background-color: var(--background-grey-dark);
-    color: var(--white);
     display: flex;
     flex-direction: column;
-    padding: u.rem(22) u.rem(25);
     gap: u.rem(16);
+    padding: u.rem(22) u.rem(25);
+    @include u.breakpoint(medium) {
+        flex-direction: row-reverse;
+        align-items: center;
+        height: u.rem(114);
+        padding-bottom: 0;
+    }
+    &__title {
+        color: var(--white);
+        font-size: u.rem(18);
+        height: u.rem(27);
+        width: u.rem(137);
+        @include u.breakpoint(medium) {
+            width: u.rem(153);
+        }
+    }
     &__list {
         display: flex;
         flex-direction: column;
         gap: u.rem(7);
-        &--item {
-            display: flex;
-            align-items: center;
-            list-style: none; 
+        @include u.breakpoint(medium) {
+            flex-direction: row;
         }
-        & a {
-            color: var(--white);
+        &--grand {
+            height: u.rem(19);
+            width: u.rem(190);
         }
-        & .strong {
-            font-weight: 500;
+        &--petit {
+            height: u.rem(20);
+            width: u.rem(130);
         }
     }
 }
