--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -108,8 +108,8 @@ h4 {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* font-weight: 400; */
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15) inset;
+  font-weight: 400;
+  box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.15) inset;
 }
 @media (min-width: 48em) {
   .header__location {
@@ -235,13 +235,119 @@ h4 {
 }
 .footer__list--grand {
   height: 1.1875rem;
-  width: 190px;
+  width: 11.875rem;
 }
 .footer__list--petit {
   height: 1.25rem;
-  width: 130px;
+  width: 8.125rem;
 }
 
+.loader {
+  background: linear-gradient(120deg, var(--btn-green-light), var(--btn-green-dark));
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: fadeout 0.2s 3s forwards;
+}
+
+@keyframes fadeout {
+  from {
+    opacity: 100%;
+  }
+  to {
+    opacity: 0%;
+    visibility: hidden;
+  }
+}
+.loader__text {
+  font-size: 5rem;
+  line-height: 64px;
+  letter-spacing: 5px;
+  margin-bottom: 32px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.loader__text span {
+  font-family: "Shrikhand", cursive;
+  animation: moveLetters 3s ease-in-out;
+  transform: translatex(0);
+  position: relative;
+  display: inline-block;
+  opacity: 0;
+  text-shadow: 0px 2px 10px rgba(46, 74, 81, 0.3);
+}
+
+/* 
+@keyframes b-g-fader {
+  0% {
+    background-color: var(--btn-green-light);
+    opacity: 1;
+  }
+
+  90% {
+    background-color: var(--btn-green-light);
+    opacity: 0.8;
+  }
+
+  100% {
+    background-color: var(--btn-green-light);
+    opacity: 0;
+  }
+}
+
+
+*/
+.loader__text span:nth-child(1) {
+  animation-delay: 0.1s;
+}
+
+.loader__text span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.loader__text span:nth-child(3) {
+  animation-delay: 0.3s;
+}
+
+.loader__text span:nth-child(4) {
+  animation-delay: 0.4s;
+}
+
+.loader__text span:nth-child(5) {
+  animation-delay: 0.5s;
+}
+
+.loader__text span:nth-child(6) {
+  animation-delay: 0.6s;
+}
+
+.loader__text span:nth-child(7) {
+  animation-delay: 0.7s;
+}
+
+.loader__text span:nth-child(8) {
+  animation-delay: 0.8s;
+}
+
+@keyframes moveLetters {
+  0% {
+    transform: translateX(-9.375rem);
+    opacity: 0;
+  }
+  33.3%, 66% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(9.375rem);
+    opacity: 0.8;
+  }
+}
 .reservez__btn {
   display: inline-block;
   background: linear-gradient(193.33deg, var(--btn-purple-light) -11.44%, var(--btn-purple-dark) 123.93%);
@@ -314,7 +420,7 @@ h4 {
 }
 .card:hover {
   transform: translateY(-0.8rem);
-  box-shadow: 2px 3px 18px var(--btn-green-dark);
+  box-shadow: 0.125rem 0.1875rem 1.125rem var(--btn-green-dark);
 }
 .card__img {
   object-fit: cover;
