--- a/scss/base/_boilerplate.scss
+++ b/scss/base/_boilerplate.scss
@@ -1,14 +1,13 @@
 @use '../util' as u;
 
-html {
+/* html {
     box-sizing: border-box;
     font-size: 100%;
 }
 
 *, *::before, *::after {
     box-sizing: inherit;
-    /* box-shadow: 0 0 0 1px red inset; */
-}
+} */
 
 a, a:visited, a:active  {
     text-decoration: none;
@@ -23,10 +22,7 @@ body  {
     background-color: var(--background-color);
     font-family: u.$font-roboto;
     font-weight: 500;
-    margin: 0 auto;
-    padding: 0;
-    min-width: u.rem(375); 
-    max-width: u.rem(1440);
+    min-width: u.rem(375);
 }
 
 .container {
