--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -5,11 +5,9 @@
     background: linear-gradient(193.33deg, var(--btn-purple-light) -11.44%, var(--btn-purple-dark) 123.93%);
     color: var(--white);
     padding: u.rem(13) u.rem(18.75);
+    line-height: u.rem(18.75);
     text-align: center;
     @include u.shadow(u.rem(4), u.rem(10), 0.25, u.rem(25));
-    transition-property: transform;
-    transition: transform 500ms ease-in-out;
-    animation: drop-in 1000ms;
     &:hover {
         transform: scale(1.15);
         background: linear-gradient(193.33deg, var(--btn-purple-dark) -11.44%, var(--btn-purple-light) 123.93%);
@@ -23,7 +21,7 @@
     align-items: center;
     position: relative;
     background-color: var(--background-color);
-    width: u.rem(322);
+    width: u.rem(310);
     height: u.rem(72.38);
     @include u.shadow(u.rem(4), u.rem(15), 0.15, u.rem(20));
     &__numberBox {
@@ -49,6 +47,7 @@
         left: u.rem(33.5);
     }
     &__text {
+        line-height: u.rem(18.75);
         margin-left: u.rem(74);
         margin-right: u.rem(38);
     }
