--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,11 +5,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    top: 0;
+
+    z-index: 11;
     background-color: var(--white);
     width: 100%;
     height: u.rem(63);
+    @include u.shadow(u.rem(2), u.rem(4), 0.15, u.rem(0));
     @include u.breakpoint(medium) {
         height: u.em(96);
+        box-shadow: none
     };
     &__logo {
         width: u.rem(162);
@@ -20,15 +26,14 @@
     }
     &__location { 
         background-color: var(--background-grey-light);
-        height: u.rem(50);
-        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-weight: 400;
-        box-shadow: 0 u.rem(2) u.rem(4) 0 rgba(0, 0, 0, 0.15) inset;
+        width: 100%;
+        height: u.rem(50);
+        margin-top: u.rem(63);
         @include u.breakpoint(medium) {
-            box-shadow: none;
+            margin-top: u.rem(96);
         };
     }
 }
