--- a/scss/layout/_reservez.scss
+++ b/scss/layout/_reservez.scss
@@ -3,6 +3,9 @@
 .reservez {
     text-align: center;
     &__title {
+        font-size: u.rem(24);
+        font-weight: 700;
+        line-height: u.rem(28.13);
         margin: u.rem(39.5) u.rem(58) 0 u.rem(42);
         padding-bottom: u.rem(18);
         @include u.breakpoint(medium) {
@@ -13,7 +16,8 @@
     &__subtitle {
         font-weight: 300;
         font-size: u.rem(18);
-        margin: 0 u.rem(26) u.rem(27) u.rem(34);
+        line-height: u.rem(21.09);
+        margin-bottom: u.rem(27);
         @include u.breakpoint(medium) {
             margin: 0 u.rem(0) u.rem(31) u.rem(0);
         }
