--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,16 +1,3 @@
-:root {
-  --black: #000000;
-  --white: #FFFFFF;
-  --background-color: #F7F7F7;
-  --background-grey-light: #EAEAEA;
-  --background-grey-dark: #353535;
-  --btn-purple-dark: #9356DC;
-  --btn-purple-light: #FF79DA;
-  --btn-icone-grey: #7E7E7E;
-  --btn-green-light: #99E2D0;
-  --btn-green-dark: #008766;
-}
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -61,6 +48,19 @@ table {
   border-spacing: 0;
 }
 
+:root {
+  --black: #000000;
+  --white: #FFFFFF;
+  --background-color: #F7F7F7;
+  --background-grey-light: #EAEAEA;
+  --background-grey-dark: #353535;
+  --btn-purple-dark: #9356DC;
+  --btn-purple-light: #FF79DA;
+  --btn-icone-grey: #7E7E7E;
+  --btn-green-light: #99E2D0;
+  --btn-green-dark: #008766;
+}
+
 /* breakpoints small:375px, medium:700px, large:900px, xlarge:1440px */
 @keyframes slidein {
   from {
@@ -82,6 +82,39 @@ table {
     opacity: 1;
   }
 }
+h1 {
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 1.758125rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1.125rem;
+  font-family: "Shrikhand", cursive;
+}
+
+.reservez p {
+  font-weight: 300;
+  font-size: 1.125rem;
+  line-height: 1.318125rem;
+}
+
+.card h3 {
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 1.318125rem;
+}
+
+.card p {
+  font-weight: 300;
+  font-size: 1.0625rem;
+  line-height: 1.245rem;
+}
+
 /* html {
     box-sizing: border-box;
     font-size: 100%;
@@ -153,6 +186,7 @@ body {
 }
 @media (min-width: 48em) {
   .header__location {
+    line-height: 1.171875rem;
     margin-top: 6rem;
   }
 }
@@ -161,27 +195,22 @@ body {
   text-align: center;
 }
 .reservez__title {
-  font-size: 1.5rem;
-  font-weight: 700;
-  line-height: 1.758125rem;
   margin: 2.46875rem 3.625rem 0 2.625rem;
   padding-bottom: 1.125rem;
 }
 @media (min-width: 48em) {
   .reservez__title {
-    margin: 1.875rem 0rem 0 0rem;
     font-size: 2.5rem;
+    line-height: 2.93rem;
+    margin: 1.875rem 0rem 0 0rem;
   }
 }
 .reservez__subtitle {
-  font-weight: 300;
-  font-size: 1.125rem;
-  line-height: 1.318125rem;
   margin-bottom: 1.6875rem;
 }
 @media (min-width: 48em) {
   .reservez__subtitle {
-    margin: 0 0rem 1.9375rem 0rem;
+    margin-bottom: 1.9375rem;
   }
 }
 .reservez__btn {
@@ -189,7 +218,7 @@ body {
 }
 @media (min-width: 48em) {
   .reservez__btn {
-    margin-bottom: 2.6875rem;
+    margin-bottom: 1.875rem;
   }
 }
 
@@ -198,6 +227,7 @@ body {
 }
 .fonctionnement__title {
   padding-top: 3rem;
+  line-height: 1.758125rem;
 }
 @media (min-width: 48em) {
   .fonctionnement__title {
@@ -258,7 +288,6 @@ body {
 }
 .footer__title {
   color: var(--white);
-  font-size: 1.125rem;
   height: 1.6875rem;
   width: 8.5625rem;
 }
@@ -282,6 +311,7 @@ body {
   width: 11.875rem;
 }
 .footer__list--petit {
+  font-weight: 400;
   height: 1.25rem;
   width: 8.125rem;
 }
@@ -297,14 +327,15 @@ body {
   justify-content: center;
   align-items: center;
   animation: fadeout 0.2s 4s forwards;
+  opacity: 0.95;
 }
 
 @keyframes fadeout {
   from {
-    opacity: 100%;
+    opacity: 1;
   }
   to {
-    opacity: 0%;
+    opacity: 0;
     visibility: hidden;
   }
 }
@@ -331,26 +362,6 @@ body {
   text-shadow: 0px 2px 10px rgba(0, 0, 0, 0.9);
 }
 
-/* 
-@keyframes b-g-fader {
-  0% {
-    background-color: var(--btn-green-light);
-    opacity: 1;
-  }
-
-  90% {
-    background-color: var(--btn-green-light);
-    opacity: 0.8;
-  }
-
-  100% {
-    background-color: var(--btn-green-light);
-    opacity: 0;
-  }
-}
-
-
-*/
 .loader__text span:nth-child(1) {
   animation-delay: 0.1s;
 }
@@ -399,20 +410,22 @@ body {
 }
 .reservez__btn {
   display: inline-block;
-  background: linear-gradient(193.33deg, var(--btn-purple-light) -11.44%, var(--btn-purple-dark) 123.93%);
+  background: linear-gradient(193.33deg, var(--btn-purple-dark) -11.44%, var(--btn-purple-light) 123.93%);
   color: var(--white);
   padding: 0.8125rem 1.171875rem;
   line-height: 1.171875rem;
   text-align: center;
+  border: none;
   box-shadow: 0 0.25rem 0.625rem 0 rgba(0, 0, 0, 0.25);
   border-radius: 1.5625rem;
+  transition: 300ms ease-out;
 }
 .reservez__btn:hover {
-  transform: scale(1.15);
-  background: linear-gradient(193.33deg, var(--btn-purple-dark) -11.44%, var(--btn-purple-light) 123.93%);
-  box-shadow: 0 0.25rem 0.625rem 0 rgba(0, 0, 0, 0.25);
+  /* transform: matrix(1, 0, 0, -1, 0, 0); */
+  transform: scale(1.1);
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, var(--btn-purple-dark) -5.2%, var(--btn-purple-light) 110.74%);
+  box-shadow: 0 0.25rem 0.9375rem 0 rgba(0, 0, 0, 0.35);
   border-radius: 1.5625rem;
-  transform: matrix(1, 0, 0, -1, 0, 0);
 }
 
 .fonctionnement__btn {
@@ -424,6 +437,11 @@ body {
   height: 4.52375rem;
   box-shadow: 0 0.25rem 0.9375rem 0 rgba(0, 0, 0, 0.15);
   border-radius: 1.25rem;
+  transition: all 500ms ease-in-out;
+}
+.fonctionnement__btn:hover {
+  transform: translateY(-0.4rem);
+  box-shadow: 0.125rem 0.1875rem 0.9375rem var(--btn-purple-dark);
 }
 .fonctionnement__btn__numberBox {
   background-color: var(--btn-purple-dark);
@@ -467,7 +485,7 @@ body {
   transition: all 500ms ease-in-out;
 }
 .card:hover {
-  transform: translateY(-0.8rem);
+  transform: translateY(-0.6rem);
   box-shadow: 0.125rem 0.1875rem 1.125rem var(--btn-green-dark);
 }
 .card__img {
@@ -491,12 +509,9 @@ body {
   font-size: 0.875rem;
 }
 .card__title {
-  font-size: 1.125rem;
   margin: 1rem 3.75rem 0.3125rem 0.8125rem;
 }
 .card__subtitle {
-  font-size: 1.0625rem;
-  font-weight: 300;
   margin: 0 5rem 0.75rem 0.8125rem;
 }
 .card__icon {
