--- a/scss/layout/_fonctionnement.scss
+++ b/scss/layout/_fonctionnement.scss
@@ -4,6 +4,7 @@
     background-color: var(--white);
     &__title {
         padding-top: u.rem(48);
+        line-height: u.rem(28.13);
         @include u.breakpoint(medium) {
             padding-top: u.rem(50);
         }
