--- a/scss/base/_boilerplate.scss
+++ b/scss/base/_boilerplate.scss
@@ -1,13 +1,6 @@
 @use '../util' as u;
 
-/* html {
-    box-sizing: border-box;
-    font-size: 100%;
-}
-
-*, *::before, *::after {
-    box-sizing: inherit;
-} */
+/*----- Generale -----*/
 
 a, a:visited, a:active  {
     text-decoration: none;
