--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,4 +1,5 @@
 @use '../util/' as u;
+/*----- Cards -----*/
 
 .card {
     background-color: var(--background-color);
@@ -43,8 +44,16 @@
         position: absolute;
         bottom: u.rem(33);
         right: u.rem(25);
+        background: url("/assets/images/logo/heart.svg");
+        background-repeat: no-repeat;
+        height: 21px;
+        width: 22px;
+        &:hover {
+            background: url("/assets/images/logo/heart-like.svg");
+        }
     }
 }
+
 #clock-gradient {
     opacity: 0.0;
     display: inline-block;
