--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,6 +98,8 @@ h2 {
 h4 {
   font-size: 1.125rem;
   font-family: "Shrikhand", cursive;
+  font-weight: 400;
+  line-height: 1.64rem;
 }
 
 .reservez p {
@@ -274,23 +276,31 @@ body {
 /*----- Footer -----*/
 .footer {
   background-color: var(--background-grey-dark);
+}
+.footer__container {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1.375rem 1.5625rem;
+  width: calc(100% - 3.125rem);
+  max-width: 90rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1.375rem 0;
 }
 @media (min-width: 48em) {
-  .footer {
+  .footer__container {
+    display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    height: 7.125rem;
-    padding-bottom: 0;
+    padding-top: 4rem;
+    padding-bottom: 1.875rem;
   }
 }
 .footer__title {
   color: var(--white);
   height: 1.6875rem;
   width: 8.5625rem;
+  line-height: 1.171875rem;
 }
 @media (min-width: 48em) {
   .footer__title {
@@ -308,13 +318,13 @@ body {
   }
 }
 .footer__list--grand {
-  height: 1.1875rem;
   width: 11.875rem;
+  height: 1.1875rem;
 }
 .footer__list--petit {
   font-weight: 400;
-  height: 1.25rem;
   width: 8.125rem;
+  height: 1.25rem;
 }
 
 /*----- Loader -----*/
@@ -521,13 +531,13 @@ body {
   position: absolute;
   bottom: 2.0625rem;
   right: 1.5625rem;
-  background: url("../images/logo/heart.svg");
+  background: url("../images/icon/heart.svg");
   background-repeat: no-repeat;
   height: 21px;
   width: 22px;
 }
 .card__icon:hover {
-  background: url("../images/logo/heart-like.svg");
+  background: url("../images/icon/heart-like.svg");
 }
 
 #clock-gradient {
