--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -14,6 +14,8 @@ h2 {
 h4 {
     font-size: u.rem(18);
     font-family: u.$font-shirkhand;
+    font-weight: 400;
+    line-height: u.rem(26.24);
 }
 
 .reservez p {
