--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,10 +144,17 @@ body {
   margin-right: auto;
 }
 
+.footer__container {
+  width: calc(100% - 3.125rem);
+  max-width: 90rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*----- Header -----*/
 .header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   position: fixed;
@@ -164,6 +171,10 @@ body {
     height: 6em;
     box-shadow: none;
   }
+}
+.header__link {
+  position: absolute;
+  left: 23px;
 }
 .header__logo {
   width: 10.125rem;
@@ -281,10 +292,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: calc(100% - 3.125rem);
-  max-width: 90rem;
-  margin-left: auto;
-  margin-right: auto;
   padding: 1.375rem 0;
 }
 @media (min-width: 48em) {
@@ -351,7 +358,7 @@ body {
     visibility: hidden;
   }
 }
-.loader__text {
+.loader__text, .loader__palette {
   font-size: 2.5rem;
   line-height: 64px;
   letter-spacing: 10px;
@@ -359,11 +366,11 @@ body {
   justify-content: space-between;
 }
 @media (min-width: 48em) {
-  .loader__text {
+  .loader__text, .loader__palette {
     font-size: 5rem;
   }
 }
-.loader__text span {
+.loader__text span, .loader__palette span {
   font-family: "Shrikhand", cursive;
   color: var(--btn-green-dark);
   animation: moveLetters 3s ease-in-out;
@@ -404,6 +411,66 @@ body {
 
 .loader__text span:nth-child(8) {
   animation-delay: 0.8s;
+}
+
+.loader__palette span:nth-child(1) {
+  animation-delay: 0.1s;
+}
+
+.loader__palette span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.loader__palette span:nth-child(3) {
+  animation-delay: 0.3s;
+}
+
+.loader__palette span:nth-child(4) {
+  animation-delay: 0.4s;
+}
+
+.loader__palette span:nth-child(5) {
+  animation-delay: 0.5s;
+}
+
+.loader__palette span:nth-child(6) {
+  animation-delay: 0.6s;
+}
+
+.loader__palette span:nth-child(7) {
+  animation-delay: 0.7s;
+}
+
+.loader__palette span:nth-child(8) {
+  animation-delay: 0.8s;
+}
+
+.loader__palette span:nth-child(9) {
+  animation-delay: 0.9s;
+}
+
+.loader__palette span:nth-child(10) {
+  animation-delay: 1s;
+}
+
+.loader__palette span:nth-child(11) {
+  animation-delay: 1.1s;
+}
+
+.loader__palette span:nth-child(12) {
+  animation-delay: 1.2s;
+}
+
+.loader__palette span:nth-child(13) {
+  animation-delay: 1.3s;
+}
+
+.loader__palette span:nth-child(14) {
+  animation-delay: 1.4s;
+}
+
+.loader__palette span:nth-child(15) {
+  animation-delay: 1.5s;
 }
 
 @keyframes moveLetters {
@@ -551,4 +618,13 @@ body {
 
 #clock-gradient:hover {
   opacity: 1;
+}
+
+.banner1 {
+  position: relative;
+  top: 63px;
+  background-image: url("../images/restaurants/palette.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 17.1875rem;
 }
