--- a/scss/base/_boilerplate.scss
+++ b/scss/base/_boilerplate.scss
@@ -24,3 +24,10 @@ body  {
     margin-left: auto;
     margin-right: auto;
 }
+
+.footer__container {
+    width: calc(100% - u.rem(50));
+    max-width: u.rem(1440);
+    margin-left: auto;
+    margin-right: auto;
+}
