--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,18 +135,36 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   min-width: 23.4375rem;
+  position: relative;
 }
 
 .container {
   width: calc(100% - 2.5rem);
-  max-width: 64rem;
+  max-width: 67.5rem;
   margin-left: auto;
   margin-right: auto;
 }
 
-.footer__container {
-  width: calc(100% - 3.125rem);
+.footer .container {
+  display: flex;
+  flex-direction: column;
   max-width: 90rem;
+  gap: 1rem;
+  padding: 1.375rem 0;
+}
+@media (min-width: 48em) {
+  .footer .container {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    padding-top: 4rem;
+    padding-bottom: 1.875rem;
+  }
+}
+
+.menu__main {
+  width: calc(100% - 3.125rem);
+  max-width: 65.9375rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -174,7 +192,7 @@ body {
 }
 .header__link {
   position: absolute;
-  left: 23px;
+  left: 1.4375rem;
 }
 .header__logo {
   width: 10.125rem;
@@ -249,13 +267,14 @@ body {
 .fonctionnement__wrap {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
   gap: 1.5625rem;
   padding-top: 1.625rem;
   padding-bottom: 4.25rem;
 }
 @media (min-width: 48em) {
   .fonctionnement__wrap {
+    margin-left: -0.5rem;
     padding-top: 1.5625rem;
     padding-bottom: 3.125rem;
   }
@@ -287,21 +306,6 @@ body {
 /*----- Footer -----*/
 .footer {
   background-color: var(--background-grey-dark);
-}
-.footer__container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 1.375rem 0;
-}
-@media (min-width: 48em) {
-  .footer__container {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    padding-top: 4rem;
-    padding-bottom: 1.875rem;
-  }
 }
 .footer__title {
   color: var(--white);
@@ -335,7 +339,7 @@ body {
 }
 
 /*----- Loader -----*/
-.loader {
+.loader, .loader-gout {
   background: linear-gradient(120deg, var(--btn-green-light), var(--btn-green-dark));
   position: fixed;
   height: 100%;
@@ -345,8 +349,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: fadeout 0.2s 4s forwards;
+  animation: fadeout 0.2s 3s forwards;
   opacity: 0.95;
+}
+
+.loader-gout {
+  animation: fadeout 0.2s 4s forwards;
 }
 
 @keyframes fadeout {
@@ -373,7 +381,7 @@ body {
 .loader__text span, .loader__palette span {
   font-family: "Shrikhand", cursive;
   color: var(--btn-green-dark);
-  animation: moveLetters 3s ease-in-out;
+  animation: moveLetters 2s ease-in-out;
   transform: translatex(0);
   position: relative;
   display: inline-block;
@@ -475,7 +483,7 @@ body {
 
 @keyframes moveLetters {
   0% {
-    transform: translateX(-9.375rem);
+    transform: translateX(-7.5rem);
     opacity: 0;
   }
   33.3%, 66% {
@@ -483,7 +491,7 @@ body {
     opacity: 1;
   }
   100% {
-    transform: translateX(9.375rem);
+    transform: translateX(3.75rem);
     opacity: 0.8;
   }
 }
@@ -519,7 +527,7 @@ body {
   transition: all 500ms ease-in-out;
 }
 .fonctionnement__btn:hover {
-  transform: translateY(-0.4rem);
+  transform: translateY(-0.2rem);
   box-shadow: 0.125rem 0.1875rem 0.9375rem var(--btn-purple-dark);
 }
 .fonctionnement__btn__numberBox {
@@ -563,21 +571,9 @@ body {
   box-shadow: 0 0.25rem 0.9375rem 0 rgba(0, 0, 0, 0.1);
   border-radius: 0.9375rem;
   transition: all 500ms ease-in-out;
-  /* &__icon {
-      position: absolute;
-      bottom: u.rem(33);
-      right: u.rem(25);
-      background: url("../images/icon/heart.svg");
-      background-repeat: no-repeat;
-      height: 21px;
-      width: 22px;
-      &:hover {
-          background: url("../images/icon/heart-like.svg");
-      }
-  } */
 }
 .card:hover {
-  transform: translateY(-0.6rem);
+  transform: translateY(-0.2rem);
   box-shadow: 0.125rem 0.1875rem 1.125rem var(--btn-green-dark);
 }
 .card__img {
@@ -614,6 +610,17 @@ body {
   bottom: 2.0625rem;
   right: 1.5625rem;
 }
+.card__icon {
+  position: absolute;
+  bottom: 2.0625rem;
+  right: 1.5625rem;
+  background: url("../images/icon/heart.svg");
+  height: 21px;
+  width: 22px;
+}
+.card__icon:hover {
+  background: url("../images/icon/heart-like.svg");
+}
 
 svg .heart {
   transform-origin: center;
@@ -631,11 +638,32 @@ svg .heart {
   stroke: none;
 }
 
-.banner1 {
-  position: relative;
-  top: 63px;
-  background-image: url("../images/restaurants/palette.jpg");
+.mission {
+  display: flex;
+  background-image: url(../images/restaurants/palette.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
-  height: 17.1875rem;
+  background-position: center;
+  height: 23.4375rem;
+  max-width: 90rem;
 }
+
+.text_over {
+  margin: auto;
+  background-color: var(--background-color);
+  width: 90%;
+  border-radius: 25px 25px 0 0;
+}
+
+.text_over h2 {
+  height: 100px;
+}
+
+/* .mission {
+    background-image: url("../images/restaurants/palette.jpg");
+    display: flex;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 700px;
+    max-width: 1200px;
+    margin: 40px auto 40px auto;
+} */
